Index.html updated

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Visualization - Project</title>
+    <title>Information Visualisation Project - Sen Thotawatte</title>
     <!-- External Scripts -->
     <script src="bower_components/d3/d3.js"></script>
     <script src="bower_components/jquery-3.2.1.min.js"></script>
