--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>  
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+    <nav class="navabar class">
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" style="font-size: 25px" href="trend.html">Trend View</a>
