--- a/trend.html
+++ b/trend.html
@@ -22,12 +22,12 @@
 
 <body>
     <nav class="navbar tool top">
-        <ul class="nav-navbar">
-            <li class="item-nav active">
-                <a class="link-nav font" style="font-size: 24px" href="trend.html">Trend View</a>
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link font" style="font-size: 25px" href="trend.html">Trend View</a>
             </li>
-            <li class="item-nav">
-                <a class="link-nav" style="font-size: 24px" href="index.html">Explore View</a>
+            <li class="nav-item">
+                <a class="nav-link" style="font-size: 25px" href="index.html">Explore View</a>
             </li>
         </ul>
     </nav>
