New changes (original)

--- a/trend.html
+++ b/trend.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <nav class="navbar tool top">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
         <ul class="navbar-nav">
             <li class="nav-item active">
                 <a class="nav-link font" style="font-size: 25px" href="trend.html">Trend View</a>
