--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
 <body>  
-    <nav class="navbar tool top">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" style="font-size: 25px" href="trend.html">Trend View</a>
