--- a/trend.html
+++ b/trend.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Visualization - Project</title>
+    <title>Information Visualisation Project - Sen Thotawatte</title>
     <meta charset="UTF-8">
     <!-- Stylesheets -->
     <link rel="stylesheet" href="public/css/style.css"/>
