--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-</head>
+<head>
     <meta charset="UTF-8">
     <title>Information Visualisation Project - Sen Thotawatte</title>
     <!-- Scripts which are external -->
