--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Information Visualisation Project - Sen Thotawatte</title>
+    <title>Visualization - Project</title>
     <!-- Scripts which are external -->
     <script src="bower_components/d3-tip/index.js"></script>
     <script src="public/js/bootstrap-4.0.0-beta.2-dist/bootstrap.min.js"></script>
