--- a/trend.html
+++ b/trend.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Information Visualisation Project - Sen Thotawatte</title>
+    <title>Visualization - Project</title>
     <meta charset="UTF-8">
     <!-- Stylesheets -->
     <link rel="stylesheet" href="public/css/style.css"/>
@@ -17,7 +17,6 @@
     <!-- <script src="d3/d3.js"></script>
     <script src="d3/d3.min.js"></script> -->
     <!--<script src="bower_components/d3.layout.cloud.js"></script>-->
-
 </head>
 
 <body>
