--- a/index.html
+++ b/index.html
@@ -4,20 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Visualization - Project</title>
-    <!-- Scripts which are external -->
-    <script src="bower_components/d3-tip/index.js"></script>
-    <script src="public/js/bootstrap-4.0.0-beta.2-dist/bootstrap.min.js"></script>
-    <script src="bower_components/popper.js"></script>
-    <script src="bower_components/jquery-3.2.1.min.js"></script>
+    <!-- External Scripts -->
     <script src="bower_components/d3/d3.js"></script>
-    <!-- CSS sheets for styles -->
-    <link rel="stylesheet" href="public/css/font-awesome-4.7.0/css/font-awesome.min.css"/>
+    <script src="bower_components/jquery-3.2.1.min.js"></script>
+    <script src="bower_components/popper.js"></script>
+    <script src="public/js/bootstrap-4.0.0-beta.2-dist/bootstrap.min.js"></script>
+    <script src="bower_components/d3-tip/index.js"></script>
+    <!-- <script src="d3/d3.js"></script> -->
+    <!-- <script src="d3/d3.min.js"></script> -->
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="public/css/style.css"/>
     <link rel="stylesheet" href="public/css/bootstrap-4.0.0-beta.2-dist/bootstrap.min.css">
-    <link rel="stylesheet" href="public/css/style.css"/> 
+    <link rel="stylesheet" href="public/css/font-awesome-4.7.0/css/font-awesome.min.css"/>
 </head>
 
+<body>
 
-<body>  
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
         <ul class="navbar-nav">
             <li class="nav-item">
