--- a/index.html
+++ b/index.html
@@ -4,26 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Information Visualisation Project - Sen</title>
+    <!-- CSS stylesheets -->
     <link rel="stylesheet" href="public/css/font-awesome-4.7.0/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="public/css/style.css"/>
     <link rel="stylesheet" href="public/css/bootstrap-4.0.0-beta.2-dist/bootstrap.min.css">
+    
+    <!-- JS exeternal scripts -->
     <script src="bower_components/d3/d3.js"></script>
     <script src="bower_components/popper.js"></script>
     <script src="bower_components/d3-tip/index.js"></script>
     <script src="bower_components/jquery-3.2.1.min.js"></script>
     <script src="public/js/bootstrap-4.0.0-beta.2-dist/bootstrap.min.js"></script>
-
 </head>
 
 <body>
-
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+    <nav class="navbar navbar-expand-sm bg-light navbar-light fixed-top">
         <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" style="font-size: 25px" href="trend.html">Trend View</a>
-            </li>
             <li class="nav-item active">
-                <a class="nav-link" style="font-size: 25px" href="index.html">Explore View</a>
+                <a class="nav-link" style="font-size: 30px" href="index.html">Explore View</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" style="font-size: 30px" href="trend.html">Trend View</a>
             </li>
         </ul>
     </nav>
