--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm bg-light navbar-light fixed-top">
+    <nav class="navbar navbar-expand-sm navbar-light fixed-top bg-dark ">
         <ul class="navbar-nav">
             <li class="nav-item active">
                 <a class="nav-link" style="font-size: 30px" href="index.html">Explore View</a>
