--- a/index.html
+++ b/index.html
@@ -17,28 +17,32 @@
     <script src="public/js/bootstrap-4.0.0-beta.2-dist/bootstrap.min.js"></script>
 </head>
 
+<!-- Creating Nav bar and assigning color, size, position as well as names for each subpage 'Movie Explorer' , 'Movie Trend' -->
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-dark ">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" style="font-size: 30px" href="index.html">Explore View</a>
+                <a class="nav-link" style="font-size: 30px" href="index.html">Movie Explorer</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" style="font-size: 30px" href="trend.html">Trend View</a>
+                <a class="nav-link" style="font-size: 30px" href="trend.html">Movie Trend</a>
             </li>
         </ul>
     </nav>
 
+ <!-- Break to alow gap after navbar -->
+
     </br></br></br></br></br>
 
+<!-- Creating Table for movie, director, year, imdb score, and budget-->
     <div class="row" id="filters">
 
         <div class="col-sm-6 pl-sm-5">
-            <div class="h-50" id="yearSlider">
-                <h3 class="text-sm-left" id="selectedYears">Selected Year(s): </h3>
-            </div>
             <div class="h-50" id="ratingSlider">
                 <h3 class="text-sm-left" id="selectedRatings">Selected Rating(s): </h3>
+            </div>
+            <div class="h-50" id="yearSlider">
+                <h3 class="text-sm-left" id="selectedYears">Selected Year(s): </h3>
             </div>
         </div>
 
