--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
 
     </br></br></br></br></br>
 
-<!-- Creating Table for movie, director, year, imdb score, and budget-->
+<!-- Creating filter sliders for movie ratings and selected years-->
     <div class="row" id="filters">
 
         <div class="col-sm-6 pl-sm-5">
-            <div class="h-50" id="ratingSlider">
-                <h3 class="text-sm-left" id="selectedRatings">Selected Rating(s): </h3>
+            <div class="h-49" id="sliderRating">
+                <h3 class="text-sm-left" id="ratingSelected">Rating(s) Selected </h3>
             </div>
-            <div class="h-50" id="yearSlider">
-                <h3 class="text-sm-left" id="selectedYears">Selected Year(s): </h3>
+            <div class="h-49" id="sliderYear">
+                <h3 class="text-sm-left" id="yearSelected">Year(s) Selected: </h3>
             </div>
         </div>
 
