original movie table

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 <!-- Creating table for movies displaying filtered movies, year, director, imdb score, and budget-->
         <div class="col-sm pl-sm-5">
             <h3 class="text-sm-center pb-3">Movies (Filtered) </h3>
-            <div id="tableMoviesDiv">
-                <table id="tableMovies" class="table table-sm table-bordered table-hover table-responsive row-fluid float-right">
+            <div id="moviesTableDiv">
+                <table id="moviesTable" class="table table-sm table-bordered table-hover table-responsive row-fluid float-right">
                     <thead class="thead-light">
                     <tr>
                         <th>Movie Title &nbsp; <i class="fa fa-sort"></i></th>
