Updated to trend.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <!-- Creating Nav bar and assigning color, size, position as well as names for each subpage 'Movie Explorer' , 'Movie Trend' -->
 <body>
-    <nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-dark ">
+    <nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-dark">
         <ul class="navbar-nav">
             <li class="nav-item active">
                 <a class="nav-link" style="font-size: 30px" href="index.html">Movie Explorer</a>
@@ -30,7 +30,6 @@
         </ul>
     </nav>
 
-    <!-- Break to alow gap after navbar -->
 
     </br></br></br></br></br>
 
@@ -141,7 +140,7 @@
         </div>
     </div>
 
-    <!-- Internal JS scripts which are located in directory  -->
+    <!-- Internal JS scripts  -->
     <script type="application/javascript" src="public/js/movieTable.js"></script>
     <script type="application/javascript" src="public/js/filters.js"></script>
     <script type="application/javascript" src="public/js/nodelinkFD.js"></script>
