--- a/trend.html
+++ b/trend.html
@@ -2,35 +2,35 @@
 <html lang="en">
 
 <head>
-    <title>Visualization - Project</title>
+    <title>Information Visualisation Project - Sen</title>
     <meta charset="UTF-8">
-    <!-- Stylesheets -->
-    <link rel="stylesheet" href="public/css/style.css"/>
+    <!-- CSS Stylesheets -->
     <link rel="stylesheet" href="public/css/bootstrap-4.0.0-beta.2-dist/bootstrap.min.css">
-    <!-- External Scripts -->
-    <script src="bower_components/d3/d3.js"></script>
+    <link rel="stylesheet" href="public/css/style.css"/>
+   
+    <!-- JS external Scripts -->
     <script src="bower_components/jquery-3.2.1.min.js"></script>
-    <script src="bower_components/popper.js"></script>
+    <script src="bower_components/d3/d3.js"></script>
     <script src="public/js/bootstrap-4.0.0-beta.2-dist/bootstrap.min.js"></script>
     <script src="bower_components/d3-tip/index.js"></script>
+    <script src="bower_components/popper.js"></script>
     <script src="bower_components/d3v3.js"></script>
-    <!-- <script src="d3/d3.js"></script>
-    <script src="d3/d3.min.js"></script> -->
-    <!--<script src="bower_components/d3.layout.cloud.js"></script>-->
 </head>
 
+<!-- Creating Nav bar and assigning color, size, position as well as names for each subpage 'Movie Explorer' , 'Movie Trend' -->
 <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+    <nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-dark">
         <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link font" style="font-size: 25px" href="trend.html">Trend View</a>
-            </li>
             <li class="nav-item">
-                <a class="nav-link" style="font-size: 25px" href="index.html">Explore View</a>
+                <a class="nav-link" style="font-size: 30px" href="index.html">Movie Explorer</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link font" style="font-size: 30px" href="trend.html">Movie Trend</a>
             </li>
         </ul>
     </nav>
 
+    <!-- Break to alow gap after navbar -->
     </br></br></br></br></br>
 
     <div class="row">
