--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <div class="modal-content">
                 <!-- Footer of modal -->
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Ok</button>
                 </div>
                 
                 <!-- Body of modal -->
@@ -133,7 +133,7 @@
 
                 <!-- Header of modal-->
                 <div class="modal-header">
-                    <h4 class="modal-title" id="headerMessage"></h4>
+                    <h4 class="modal-title" id="headerMessage">Error</h4>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
             </div>
