--- a/trend.html
+++ b/trend.html
@@ -54,14 +54,15 @@
                             <input class="form-control-sm" id="nameDirectorOrActor" list="namesDirectorOrActor">
                             <datalist id="namesDirectorOrActor"></datalist>
                         </div>
+                        <!-- Button to select apply changes and update actor or director-->
+                        <div class="col-sm">
+                            <button class="btn btn-primary" type="button" id="applyDirectorOrActor" onclick="applyTrend()">Update Director/Actor</button>
+                        </div>                        
                         <!-- Radio button to select and filter movie attribute for field: (Rating, Gross, Budget, Facebook likes, User Reviews)-->
                         <div class="col-sm">
                             <label class="text-white text-center" for="attributes">Apply attribute(s):</label>
                         </div>
-                        <!-- Button to select apply changes and update actor or director-->
-                        <div class="col-sm">
-                            <button class="btn btn-primary" type="button" id="applyDirectorOrActor" onclick="applyTrend()">Update Director/Actor</button>
-                        </div>
+
 
                         <div class="col-sm">
                             <select class="form-control-sm" id="attributes" onchange="applyTrend()">
@@ -117,13 +118,15 @@
 
     <div class="row">
         <div class= "col-sm-1"></div>    <!-- Left Side Margin -->
-        <div class="col-sm-4" id="correlationMatrix"></div>
-        <div class="col-sm-5" id="scatterPlot"></div>
+        <div class="col-sm-4" id="correlationMatrix">
+        </div>
+        <div class="col-sm-5" id="scatterPlot">
+        </div>
         <div class="col-sm-1"></div>    <!-- Right Side Margin -->
     </div>
 
     <!-- JS Internal Scripts -->
-    <script src="public/js/actorDirectorStats.js"></script>
+    <script src="public/js/statsActorDirector.js"></script>
     <script src="public/js/trend_script.js"></script>
     <script src="public/js/correlationMatrix.js"></script>
     <script src="public/js/scatterPlot.js"></script>
