--- a/trend.html
+++ b/trend.html
@@ -56,7 +56,7 @@
                         </div>
                         <!-- Button to select apply changes and update actor or director-->
                         <div class="col-sm">
-                            <button class="btn btn-primary" type="button" id="applyDirectorOrActor" onclick="applyTrend()">Update actor</button>
+                            <button class="btn btn-primary" type="button" id="applyDirectorOrActor" onclick="updateTrendPlot()">Update actor</button>
                         </div>                        
                         <!-- Radio button to select and filter movie attribute for field: (Rating, Gross, Budget, Facebook likes, User Reviews)-->
                         <div class="col-sm">
@@ -65,7 +65,7 @@
 
 
                         <div class="col-sm">
-                            <select class="form-control-sm" id="attributes" onchange="applyTrend()">
+                            <select class="form-control-sm" id="attributes" onchange="updateTrendPlot()">
                                 <option selected value="imdb_score">Rating</option>
                                 <option value="gross">Gross</option>
                                 <option value="budget">Budget</option>
