change name for trend plot

--- a/trend.html
+++ b/trend.html
@@ -78,8 +78,8 @@
             </div>
             </br>
             <div>
-                <svg id="plotTrend">
-                    <g id="plotTrendGroup">
+                <svg id="trend-plot">
+                    <g id="trend-plot-group">
                         <g id="xAxis"></g>
                         <g id="xLabel"></g>
                         <g id="yAxis"></g>
