update attribute changed back

--- a/trend.html
+++ b/trend.html
@@ -60,7 +60,7 @@
                         </div>                        
                         <!-- Radio button to select and filter movie attribute for field: (Rating, Gross, Budget, Facebook likes, User Reviews)-->
                         <div class="col-sm">
-                            <label class="text-white text-center" for="attributes">Apply attribute(s):</label>
+                            <label class="text-white text-center" for="attributes">Update attribute(s):</label>
                         </div>
 
 
