--- a/trend.html
+++ b/trend.html
@@ -78,8 +78,8 @@
             </div>
             </br>
             <div>
-                <svg id="plotTrent">
-                    <g id="plotTrendGroup">
+                <svg id="trend-plot">
+                    <g id="trend-plot-group">
                         <g id="xAxis"></g>
                         <g id="xLabel"></g>
                         <g id="yAxis"></g>
@@ -126,9 +126,9 @@
     </div>
 
     <!-- JS Internal Scripts -->
-    <script src="public/js/correlationMatrix.js"></script>
     <script src="public/js/statsActorDirector.js"></script>
     <script src="public/js/trend_script.js"></script>
+    <script src="public/js/correlationMatrix.js"></script>
     <script src="public/js/scatterPlot.js"></script>
 </body>
 </html>
