--- a/trend.html
+++ b/trend.html
@@ -66,10 +66,10 @@
 
                         <div class="col-sm">
                             <select class="form-control-sm" id="attributes" onchange="applyTrend()">
-                                <option selected value="imdb_score">Rating</option>
+                                <option selected value="num_user_for_reviews">User reviews</option>
+                                <option value="imdb_score">Rating</option>
                                 <option value="budget">Budget</option>
                                 <option value="gross">Gross</option>
-                                <option value="num_user_for_reviews">User reviews</option>
                                 <option value="movie_facebook_likes">Facebook likes</option>
 
                             </select>
