--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         <th>Movie Title &nbsp; <i class="fa fa-sort"></i></th>
                         <th>Director &nbsp; <i class="fa fa-sort"></i></th>
                         <th>IMDB Score &nbsp; <i class="fa fa-sort"></i></th>
-                        <th>Budget &nbsp; <i class="fa fa-sort"></i></th>
+                        <th>Budget (USD) &nbsp; <i class="fa fa-sort"></i></th>
                     </tr>
                     </thead>
                     <tbody>
