--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     </br></br></br></br></br>
 
-    <!-- Creating filter sliders for selected years and selected ratings of movies-->
+    <!-- Creating filter sliders for selected years and selected ratings of films-->
     <div class="row" id="filters">
 
         <div class="col-sm-6 pl-sm-5">
@@ -48,7 +48,7 @@
         <!-- Creating empty column as gap between in the middle-->    
         <div class="col-sm-1"></div>
 
-        <!-- Creating genre check-box filters to filter genre of movies-->
+        <!-- Creating genre check-box filters to filter genre of films-->
         <div class="col-sm-5 pr-sm-5" id="checkBoxGenre">
             <h3 class="text-sm-left">Filter Genres</h3>
             <div class="row">
@@ -84,7 +84,7 @@
     <!-- Creating two columns for movie table and node-link diagram-->
     <div class="row">
 
-        <!-- Creating table for movies displaying filtered movies, year, director, imdb score, and budget-->
+        <!-- Creating table for films displaying filtered films, year, director, imdb score, and budget-->
         <div class="col-sm pl-sm-5">
             <h3 class="text-sm-center pb-3">Movies (Filtered) </h3>
             <div id="tableMoviesDiv">
