--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
                     <thead class="thead-light">
                     <tr>
                         <th>Year &nbsp; <i class="fa fa-sort"></i></th>
-                        <th>Movie Title &nbsp; <i class="fa fa-sort"></i></th>
+                        <th>Movie &nbsp; <i class="fa fa-sort"></i></th>
                         <th>Director &nbsp; <i class="fa fa-sort"></i></th>
-                        <th>IMDB Score &nbsp; <i class="fa fa-sort"></i></th>
+                        <th>IMDB Rating &nbsp; <i class="fa fa-sort"></i></th>
                         <th>Budget (USD) &nbsp; <i class="fa fa-sort"></i></th>
                     </tr>
                     </thead>
