moveTable file changed

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Information Visualisation Project - Sen</title>
-    
+
     <!-- CSS stylesheets -->
     <link rel="stylesheet" href="public/css/font-awesome-4.7.0/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="public/css/style.css"/>
@@ -142,7 +142,7 @@
     </div>
 
     <!-- Internal JS scripts  -->
-    <script type="application/javascript" src="public/js/movieTable.js"></script>
+    <script type="application/javascript" src="public/js/tableFilms.js"></script>
     <script type="application/javascript" src="public/js/filters.js"></script>
     <script type="application/javascript" src="public/js/nodelinkFD.js"></script>
     <script type="application/javascript" src="public/js/explore_script.js"></script>
