films filtered name change

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         <!-- Creating table for films displaying filtered films, year, director, imdb score, and budget-->
         <div class="col-sm pl-sm-5">
-            <h3 class="text-sm-center pb-3">Movies (Filtered) </h3>
+            <h3 class="text-sm-center pb-3">Films (Filtered) </h3>
             <div id="tableMoviesDiv">
                 <table id="tableMovies" class="table table-sm table-bordered table-hover table-responsive row-fluid float-right">
                     <thead class="thead-light">
