--- a/trend.html
+++ b/trend.html
@@ -23,10 +23,10 @@
     <nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-dark">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" style="font-size: 30px" href="index.html">Movie Explorer</a>
+                <a class="nav-link" style="font-size: 30px" href="index.html">Film Explorer</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link font" style="font-size: 30px" href="trend.html">Movie Trend</a>
+                <a class="nav-link font" style="font-size: 30px" href="trend.html">Film Trend</a>
             </li>
         </ul>
     </nav>
