--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div class="row">
         <div class="col-sm-5"></div>
         <div class="col-sm-2">
-            <button class="btn btn-primary" id="submitFilters" type="button" onclick="processFilters()">Apply filters to table and node-link diagram</button>
+            <button class="btn btn-primary" id="submitFilters" type="button" onclick="filterProcess()">Apply filters to table and node-link diagram</button>
         </div>
         <div class="col-sm-5"></div>
     </div>
