--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
     <script src="public/js/bootstrap-4.0.0-beta.2-dist/bootstrap.min.js"></script>
 </head>
 
-<!-- Creating Nav bar and assigning color, size, position as well as names for each subpage 'Movie Explorer' , 'Movie Trend' -->
+<!-- Creating Nav bar and assigning color, size, position as well as names for each subpage 'Film Explorer' , 'Movie Trend' -->
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-dark">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" style="font-size: 30px" href="index.html">Movie Explorer</a>
+                <a class="nav-link" style="font-size: 30px" href="index.html">Film Explorer</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" style="font-size: 30px" href="trend.html">Movie Trend</a>
+                <a class="nav-link" style="font-size: 30px" href="trend.html">Film Trend</a>
             </li>
         </ul>
     </nav>
